// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Boolean | Boolean | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    false,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Boolean | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    false,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Function | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Function | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Function | Null 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Function | Null 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Function | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Function | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Function | Undefined 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Function | Undefined 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | NaN | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    NaN,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | NaN | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    NaN,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Null | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    null,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Null | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    null,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | String | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    "",
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | String | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    "",
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Undefined | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    undefined,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Undefined | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'false')",
    "type": "TypeError",
  },
  "inputs": Array [
    false,
    undefined,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Boolean | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    false,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Boolean | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    false,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Function | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Function | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Function | Null 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Function | Null 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Function | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Function | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Function | Undefined 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Function | Undefined 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force NaN | NaN | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    NaN,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force NaN | NaN | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    NaN,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Null | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    null,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Null | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    null,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force NaN | String | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    "",
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force NaN | String | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    "",
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Undefined | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    undefined,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Undefined | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'NaN')",
    "type": "TypeError",
  },
  "inputs": Array [
    NaN,
    undefined,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Null | Boolean | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    false,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Null | Boolean | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    false,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Null 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Null 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Undefined 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Null | Function | Undefined 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Null | NaN | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    NaN,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Null | NaN | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    NaN,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Null | Null | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    null,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Null | Null | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    null,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Null | String | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    "",
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Null | String | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    "",
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Null | Undefined | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    undefined,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Null | Undefined | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'null')",
    "type": "TypeError",
  },
  "inputs": Array [
    null,
    undefined,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Number | Boolean | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    false,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Number | Boolean | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    false,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Number | Function | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Number | Function | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Number | Function | Null 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Number | Function | Null 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Number | Function | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Number | Function | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Number | Function | Undefined 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Number | Function | Undefined 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Number | NaN | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    NaN,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Number | NaN | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    NaN,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Number | Null | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    null,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Number | Null | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    null,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Number | String | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    "",
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Number | String | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    "",
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Number | Undefined | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    undefined,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Number | Undefined | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '0')",
    "type": "TypeError",
  },
  "inputs": Array [
    0,
    undefined,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Boolean | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    false,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Boolean | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    false,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Boolean | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    false,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Boolean | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    false,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Null 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Null 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Null 5`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Null 6`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Null 7`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Null 8`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Undefined 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Undefined 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Undefined 5`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Undefined 6`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Undefined 7`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Function | Undefined 8`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | NaN | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    NaN,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | NaN | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    NaN,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | NaN | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    NaN,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | NaN | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    NaN,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Null | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    null,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Null | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    null,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Null | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    null,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Null | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    null,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | String | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    "",
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | String | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    "",
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | String | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    "",
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | String | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    "",
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Undefined | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    undefined,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Undefined | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    undefined,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force String | Undefined | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading '')",
    "type": "TypeError",
  },
  "inputs": Array [
    "",
    undefined,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force String | Undefined | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'foo')",
    "type": "TypeError",
  },
  "inputs": Array [
    "foo",
    undefined,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Boolean | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    false,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Boolean | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    false,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Function | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Function | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Function | Null 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Function | Null 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    [Function],
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Function | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Function | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Function | Undefined 3`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Function | Undefined 4`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    [Function],
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | NaN | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    NaN,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | NaN | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    NaN,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Null | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    null,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Null | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    null,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | String | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    "",
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | String | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    "",
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Undefined | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of null (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    undefined,
    null,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": null,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Undefined | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read properties of undefined (reading 'undefined')",
    "type": "TypeError",
  },
  "inputs": Array [
    undefined,
    undefined,
    undefined,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": undefined,
  "result": "PENDING",
}
`;
